mobile vertical alignment fix between navbar and content

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -144,7 +144,7 @@ p {
 
   .navLogo {
     border: 0px;
-    padding-left: 6px;
+    padding-left: 8px;
   }
 
   .navLogoDD {
