--- a/src/styles/Music.css
+++ b/src/styles/Music.css
@@ -559,14 +559,14 @@
 @media (max-width: 695px) {
 
   .musicContainer {
-    margin: 42px 20px 20px;
+    margin: 42px 36px 20px;
   }
 
   .nihiloxicaGridSection {
     justify-content: center;
   }
   .musImg {
-    width: calc(100vw - 64px);
+    width: calc(100vw - 76px);
     height: calc(100vw - 62px);
     padding-bottom: 2px;
   }
